--- a/index.html
+++ b/index.html
@@ -305,6 +305,35 @@
             </div>
         </div>
     </section>
+
+
+    <section class="contact-us heading">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-6">
+                    <form class="myForm">
+                        <h2 class="display-5"> Get Free Quote </h2>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="name" placeholder="Your Name">
+                        </div>
+
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="Email" placeholder="Email">
+                        </div>
+
+                        <div class="form-group">
+                            <textarea class="form-control" id="Textarea" rows="3" placeholder="Message"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary round">Submit</button>
+                    </form>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-fluid" src="./images/contact-us.png" />
+                </div>
+            </div>
+        </div>
+
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
