--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="stats-data row">
 
                 <div class="col-md-3 col-sm-6">
-                    <h2>
+                    <h2 class="display-3">
                         200+
                     </h2>
                     <p class="lead">
@@ -208,7 +208,7 @@
                 </div>
 
                 <div class="col-md-3 col-sm-6">
-                    <h2>
+                    <h2 class="display-3">
                         97%
                     </h2>
                     <p class="lead">
@@ -217,7 +217,7 @@
                 </div>
 
                 <div class="col-md-3 col-sm-6">
-                    <h2>
+                    <h2 class="display-3">
                         5628
                     </h2>
                     <p class="lead">
@@ -226,7 +226,7 @@
                 </div>
 
                 <div class="col-md-3 col-sm-6">
-                    <h2>
+                    <h2 class="display-3">
                         5637
                     </h2>
                     <p class="lead">
@@ -311,7 +311,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-6">
-                    <form class="myForm">
+                    <form>
                         <h2 class="display-5"> Get Free Quote </h2>
                         <div class="form-group">
                             <input type="text" class="form-control" id="name" placeholder="Your Name">
@@ -324,7 +324,7 @@
                         <div class="form-group">
                             <textarea class="form-control" id="Textarea" rows="3" placeholder="Message"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary round">Submit</button>
+                        <button type="submit" class="btn btn-primary round mybutton">Submit</button>
                     </form>
                 </div>
                 <div class="col-md-6">
@@ -332,7 +332,21 @@
                 </div>
             </div>
         </div>
+    </section>
 
+
+    <section class="call-us">
+        <div class="container">
+            <div class=" jumbotron text-center call-us-text">
+                <h2 class="display-2 ">
+                    For any information call Us
+                </h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolor nihil neque est facilis nam suscipit aspernatur magni possimus quam! Accusantium.
+                </p>
+                <button class="btn btn-primary round my-4 mybutton">9033459932</button>
+            </div>
+        </div>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
