added footer-top and footer-bottom

--- a/index.html
+++ b/index.html
@@ -348,6 +348,78 @@
             </div>
         </div>
     </section>
+
+    <section class="footer">
+        <div class="footer-top">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="footer-heading">
+                            <img src="./images/footer_logo.png" alt="logo">
+                        </div>
+                        <p>conbusi@gmail.com</p>
+                        <p>903349223</p>
+                        <p>Nilamber Triumph, Bakers Street, London</p>
+
+                    </div>
+                    <div class="col-md-3">
+
+                        <div class="footer-heading">
+                            Services
+                        </div>
+                        <p><a href="#">Marketing</a></p>
+                        <p><a href="#">Startup</a></p>
+                        <p><a href="#">Finance Solution</a></p>
+                        <p><a href="#">Food</a></p>
+                        <p><a href="#">Travel</a></p>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="footer-heading">
+                            Useful links
+                        </div>
+                        <p><a href="#">About</a></p>
+                        <p><a href="#">Blog</a></p>
+                        <p><a href="#">Contact</a></p>
+                        <p><a href="#">Appointment</a></p>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="footer-heading">
+                            Subscribe
+                        </div>
+                        <div class="gray-border">
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <form>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control no-border subscribe-input" id="yourEmail" placeholder="Enter your email" />
+                                        </div>
+                                    </form>
+
+                                </div>
+
+                                <div class="col-sm-4">
+                                    <button class="btn btn-primary subscribe-btn"> Subscribe</button>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <hr>
+
+        <div class="footer-bottom">
+            <div class="container text-center">
+                <p>Copyrights all rights reserved. This template is made by Colorib</p>
+
+            </div>
+        </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
