--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
+                            <div class=" search icon">
+                                <i class="fas fa-search fa-5x "></i>
+                            </div>
                             <h3 class="card-title">
                                 Corporate agency
                             </h3>
@@ -105,8 +108,12 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
+                            <div class="idea icon">
+                                <i class="far fa-lightbulb fa-5x "></i>
+
+                            </div>
                             <h3 class="card-title">
-                                Corporate agency
+                                Corporate agencyyy
                             </h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -118,6 +125,9 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
+                            <div class="bussiness icon">
+                                <i class="far fa-handshake fa-5x"></i>
+                            </div>
                             <h3 class="card-title">
                                 Corporate Bussiness
                             </h3>
@@ -133,6 +143,9 @@
                     <div class="card myCard">
                         <div class="card-body">
                             <h3 class="card-title">
+                                <div class="finance icon">
+                                    <i class="fas fa-search-dollar fa-3x"></i>
+                                </div>
                                 Finance agency
                             </h3>
                             <p>
@@ -145,7 +158,9 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
-
+                            <div class="food icon">
+                                <i class="fas fa-utensils fa-5x"></i>
+                            </div>
                             <h3 class="card-title">
                                 Food & restaurant
                             </h3>
@@ -159,6 +174,9 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
+                            <div class="travel icon">
+                                <i class="fas fa-plane fa-5x"></i>
+                            </div>
                             <h3 class="card-title">
                                 Travel agency
                             </h3>
