fixed icon size

--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
-                            <div class=" search icon">
-                                <i class="fas fa-search fa-5x "></i>
-                            </div>
+
+                            <i class="fas fa-search fa-2x search icon"></i>
                             <h3 class="card-title">
                                 Corporate agency
                             </h3>
@@ -108,12 +107,11 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
-                            <div class="idea icon">
-                                <i class="far fa-lightbulb fa-5x "></i>
 
-                            </div>
+                            <i class="far fa-lightbulb fa-2x idea icon"></i>
+
                             <h3 class="card-title">
-                                Corporate agencyyy
+                                Corporate agency
                             </h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -125,9 +123,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
-                            <div class="bussiness icon">
-                                <i class="far fa-handshake fa-5x"></i>
-                            </div>
+                            <i class="far fa-handshake fa-2x bussiness icon"></i>
                             <h3 class="card-title">
                                 Corporate Bussiness
                             </h3>
@@ -142,10 +138,9 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
+                            <i class="fas fa-search-dollar fa-2x finance icon"></i>
+
                             <h3 class="card-title">
-                                <div class="finance icon">
-                                    <i class="fas fa-search-dollar fa-3x"></i>
-                                </div>
                                 Finance agency
                             </h3>
                             <p>
@@ -158,9 +153,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
-                            <div class="food icon">
-                                <i class="fas fa-utensils fa-5x"></i>
-                            </div>
+                            <i class="fas fa-utensils fa-2x food icon"></i>
                             <h3 class="card-title">
                                 Food & restaurant
                             </h3>
@@ -174,9 +167,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card myCard">
                         <div class="card-body">
-                            <div class="travel icon">
-                                <i class="fas fa-plane fa-5x"></i>
-                            </div>
+                            <i class="fas fa-plane fa-2x travel icon"></i>
                             <h3 class="card-title">
                                 Travel agency
                             </h3>
